Incluyendo transacción para documento y valor_atributo_documento
